--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-	"name": "my-light-theme",
-	"displayName": "Material Light Theme (And Dark)",
+	"name": "vscode-developer-coding-theme",
+	"displayName": "SgtCoder Developer Coding Theme",
+	"description": "The perfect coding theme.",
 	"version": "1.1.9",
-	"publisher": "JonaDuran",
-	"repository": "https://github.com/JonaDuran/Material-Light-Theme.git",
 	"engines": {
-		"vscode": "^1.21.0"
+		"vscode": "^1.80.0"
 	},
 	"categories": [
 		"Themes"
@@ -14,21 +13,17 @@
 	"contributes": {
 		"themes": [
 			{
-				"label": "Material Light",
+				"label": "Coding Light",
 				"uiTheme": "vs",
 				"path": "./themes/material-color-theme.json"
 			},
 			{
-				"label": "Material Dark",
+				"label": "Coding Dark",
 				"uiTheme": "vs-dark",
 				"path": "./themes/material-dark-color-theme.json"
 			}
 		]
 	},
-	"dependencies": {},
-	"__metadata": {
-		"id": "ab1ca0da-c2ed-40aa-810a-e6d3b7dd9593",
-		"publisherDisplayName": "Jonathan Durán",
-		"publisherId": "d757a3ce-2290-4b25-83d0-cb1a84235ee9"
-	}
+	"publisher": "sgtcoder",
+	"repository": "sgtcoder/vscode-developer-coding-theme"
 }
