--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "vscode-developer-coding-theme",
+	"name": "developer-coding-theme",
 	"displayName": "SgtCoder Developer Coding Theme",
 	"description": "The perfect coding theme.",
-	"version": "2.0.0",
+	"version": "2.0.1",
 	"engines": {
 		"vscode": "^1.80.0"
 	},
